--- a/broke-components/errors-2.html
+++ b/broke-components/errors-2.html
@@ -27,9 +27,7 @@
     <div
       class="hidden bg-base-lightest lg:block lg:flex-1 lg:relative sm:contents"
     >
-      <div
-        class="absolute inset-0 object-cover w-full h-full bg-base-lightest"
-      >
+      <div class="absolute inset-0 object-cover w-full h-full bg-base-lightest">
         <video
           autoplay=""
           class="absolute z-10 w-auto min-w-full min-h-full bg-base-lightest max-w-none"
