--- a/broke-components/sidebars-2.html
+++ b/broke-components/sidebars-2.html
@@ -838,9 +838,7 @@
             </ul>
           </nav>
           <div>
-            <p
-              class="px-4 pt-4 text-xs font-semibold text-base-400 uppercase"
-            >
+            <p class="px-4 pt-4 text-xs font-semibold text-base-400 uppercase">
               Analytics
             </p>
             <ul>
