--- a/broke-components/sidebars-3.html
+++ b/broke-components/sidebars-3.html
@@ -69,9 +69,7 @@
             </div>
           </div>
           <nav class="flex-1 space-y-1 bg-base-lightest">
-            <p
-              class="px-4 pt-4 text-xs font-semibold text-base-400 uppercase"
-            >
+            <p class="px-4 pt-4 text-xs font-semibold text-base-400 uppercase">
               Analytics
             </p>
             <ul>
@@ -97,9 +95,7 @@
                 </a>
               </li>
             </ul>
-            <p
-              class="px-4 pt-4 text-xs font-semibold text-base-400 uppercase"
-            >
+            <p class="px-4 pt-4 text-xs font-semibold text-base-400 uppercase">
               Customization
             </p>
             <ul>
