--- a/broke-components/testimonials-1.html
+++ b/broke-components/testimonials-1.html
@@ -19,9 +19,7 @@
               >
                 <div>
                   <div class="text-base text-primary-dark">Annur Flint</div>
-                  <div class="mt-1 text-sm text-base-500">
-                    CEO at Flint LLC
-                  </div>
+                  <div class="mt-1 text-sm text-base-500">CEO at Flint LLC</div>
                 </div>
                 <div class="overflow-hidden rounded-theme bg-base-50">
                   <img
@@ -161,9 +159,7 @@
               >
                 <div>
                   <div class="text-base text-primary-dark">Melon Tusk</div>
-                  <div class="mt-1 text-sm text-base-500">
-                    Founder of Fesla
-                  </div>
+                  <div class="mt-1 text-sm text-base-500">Founder of Fesla</div>
                 </div>
                 <div class="overflow-hidden rounded-theme bg-base-50">
                   <img
