--- a/theme/helpers/debug.html
+++ b/theme/helpers/debug.html
@@ -1,5 +1,8 @@
 {% if params.debug %}
-<section class="fixed bottom-0 z-50 flex flex-col w-full max-w-2xl mr-auto">
+<section
+  x-cloak
+  class="fixed bottom-0 z-50 flex flex-col w-full max-w-2xl mr-auto"
+>
   <div
     class="gap-2 bg-gray-100 rounded-t-3xl"
     x-data="{
