--- a/broke-components/flyouts-1.html
+++ b/broke-components/flyouts-1.html
@@ -152,9 +152,7 @@
     <div class="px-4 mx-auto 2xl:max-w-7xl sm:px-6 md:px-8">
       <!-- === Remove and replace with your own content... === -->
       <div class="py-4">
-        <div
-          class="h-32 border border-base-200 border-dashed rounded-lg"
-        ></div>
+        <div class="h-32 border border-base-200 border-dashed rounded-lg"></div>
       </div>
       <!-- === End ===  -->
     </div>
