--- a/broke-components/flyouts-5.html
+++ b/broke-components/flyouts-5.html
@@ -186,9 +186,7 @@
     <div class="px-4 mx-auto 2xl:max-w-7xl sm:px-6 md:px-8">
       <!-- === Remove and replace with your own content... === -->
       <div class="py-4">
-        <div
-          class="border border-base-200 border-dashed rounded-lg h-96"
-        ></div>
+        <div class="border border-base-200 border-dashed rounded-lg h-96"></div>
       </div>
       <!-- === End ===  -->
     </div>
