--- a/broke-components/grids-2.html
+++ b/broke-components/grids-2.html
@@ -77,9 +77,7 @@
             File Storage
           </p>
         </div>
-        <div class="mt-4 text-base text-base-500">
-          Upload and manage files.
-        </div>
+        <div class="mt-4 text-base text-base-500">Upload and manage files.</div>
       </div>
       <div>
         <div>
