--- a/broke-components/newsletters-1.html
+++ b/broke-components/newsletters-1.html
@@ -22,9 +22,7 @@
                   <p class="text-5xl tracking-tighter text-base-lightest">
                     I am a slightly longer heading than the others
                   </p>
-                  <p
-                    class="max-w-xl mt-4 text-lg tracking-tight text-base-200"
-                  >
+                  <p class="max-w-xl mt-4 text-lg tracking-tight text-base-200">
                     If you could kick the person in the pants responsible for
                     most of your trouble, you wouldn't sit for a month
                   </p>
