--- a/broke-components/sidebars-1.html
+++ b/broke-components/sidebars-1.html
@@ -44,9 +44,7 @@
         </div>
         <div class="flex flex-col flex-grow px-4 mt-5">
           <nav class="flex-1 space-y-1 bg-base-lightest">
-            <p
-              class="px-4 pt-4 text-xs font-semibold text-base-400 uppercase"
-            >
+            <p class="px-4 pt-4 text-xs font-semibold text-base-400 uppercase">
               Analytics
             </p>
             <ul>
@@ -72,9 +70,7 @@
                 </a>
               </li>
             </ul>
-            <p
-              class="px-4 pt-4 text-xs font-semibold text-base-400 uppercase"
-            >
+            <p class="px-4 pt-4 text-xs font-semibold text-base-400 uppercase">
               Content
             </p>
             <ul>
@@ -123,9 +119,7 @@
                 </a>
               </li>
             </ul>
-            <p
-              class="px-4 pt-4 text-xs font-semibold text-base-400 uppercase"
-            >
+            <p class="px-4 pt-4 text-xs font-semibold text-base-400 uppercase">
               Customization
             </p>
             <ul>
