--- a/broke-components/sidebars-5.html
+++ b/broke-components/sidebars-5.html
@@ -44,9 +44,7 @@
         </div>
         <div class="flex flex-col flex-grow mt-5">
           <nav class="flex-1 space-y-1 bg-base-lightest">
-            <p
-              class="px-4 pt-4 text-xs font-semibold text-base-400 uppercase"
-            >
+            <p class="px-4 pt-4 text-xs font-semibold text-base-400 uppercase">
               Analytics
             </p>
             <ul>
@@ -79,9 +77,7 @@
                 </a>
               </li>
             </ul>
-            <p
-              class="px-4 pt-4 text-xs font-semibold text-base-400 uppercase"
-            >
+            <p class="px-4 pt-4 text-xs font-semibold text-base-400 uppercase">
               Content
             </p>
             <ul>
